--- a/jingdong/jd.html
+++ b/jingdong/jd.html
@@ -150,7 +150,7 @@
         </div>
     </div>
 </body>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="https://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript">
     $(function() {
         var index = 0; //用index记录下标,默认为0
